Updated CFG and CYK: - Changed how rules are created and stored - Changed how the algorithm is implemented - Added sort functionality for the terminals and non-terminals - Probably more stuff...